--- a/src/pages/detail-employee/detail-employee.scss
+++ b/src/pages/detail-employee/detail-employee.scss
@@ -7,7 +7,7 @@ page-detail-employee {
         right: 19px;
         top: 232px;
         position: absolute;
-        background-color: red;
+        background-color: rgb(218, 62, 62);
         padding: 2px;
         border-radius: 4px;
     }
@@ -15,7 +15,7 @@ page-detail-employee {
         right: 19px;
         top: 297px;
         position: absolute;
-        background-color: red;
+        background-color: rgb(218, 62, 62);
         padding: 2px;
         border-radius: 4px;
     }
