--- a/src/pages/detail-employee/detail-employee.scss
+++ b/src/pages/detail-employee/detail-employee.scss
@@ -8,7 +8,7 @@ page-detail-employee {
         top: 232px;
         position: absolute;
         background-color: rgb(218, 62, 62);
-        padding: 2px;
+        padding: 2px 3px;
         border-radius: 4px;
     }
     .bandFecha{
@@ -16,10 +16,18 @@ page-detail-employee {
         top: 297px;
         position: absolute;
         background-color: rgb(218, 62, 62);
-        padding: 2px;
+        padding: 2px 3px;
         border-radius: 4px;
     }
     .closeico{
-        
+        top: 2px;
+        position: relative;
+       
+
     }
+    .nombre{
+        background-color:  color($colors, primary2, base);
+        color:  color($colors, light, base);
+    }
+    
 }
