--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,14 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:    #303F9F,
+  primary2:   #5448a4,
+  secondary:  #60e7a6, //modificado
+  danger:     #fe001a,
+  light:      #C5CAE9,
+  dark:       #212121,
+  light-secondary:rgb(116, 116, 116),
+  dark-secondary:#2D3238,
 );
 
 
